[package]
name = "brush-ffi"
version = "0.1.0"
authors = ["Mèir Noordermeer <meirnoordermeer@me.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "brush"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
glyph_brush = "0.7.2"

[build-dependencies]
cbindgen = "0.16"